--- a/Content/less/components/panel.less
+++ b/Content/less/components/panel.less
@@ -52,7 +52,7 @@
     // Modificator 'panel--info'
     &--info{
         position: relative;
-        margin: 30px 0 70px 0;
+        margin: 30px 0;
 
         & > p{
             font-family: Georgia, Serif;
