--- a/views/sale-realty/flats.html
+++ b/views/sale-realty/flats.html
@@ -49,6 +49,7 @@
                     <a class="button button--small" href="#/">округ</a>
                     <a class="button button--small" href="#/">город</a>
                 </div>
+                <a href="#/" class="link link--dotted">Расширенный поиск</a>
             </div>
             <div class="col--1-6">
                 <a href="#/" class="button button--find col--1-1">Найти</a>
@@ -60,15 +61,15 @@
 
     <div class="grid grid-col--1-3">
         <ul class="list">
-            <li><i><a href="/sale-realty/flats/prodazha-kvartir-gorod-moskva/?or=Y">Комнаты</a></i></li>
-            <li><i><a href="/sale-realty/flats/prodazha-odnokomnatnykh-kvartir-gorod-moskva/">1-комнатные квартиры</a></i></li>
+            <li><i><a class="link link--line" href="/sale-realty/flats/prodazha-kvartir-gorod-moskva/?or=Y">Комнаты</a></i></li>
+            <li><i><a class="link link--line" href="/sale-realty/flats/prodazha-odnokomnatnykh-kvartir-gorod-moskva/">1-комнатные квартиры</a></i></li>
         </ul>
         <ul class="list">
-            <li><i><a href="/sale-realty/flats/prodazha-dvukhkomnatnykh-kvartir-gorod-moskva/">2-комнатные квартиры</a></i></li>
-            <li><i><a href="/sale-realty/flats/prodazha-trekhkomnatnykh-kvartir-gorod-moskva/">3-комнатные квартиры</a></i></li>
+            <li><i><a class="link link--line" href="/sale-realty/flats/prodazha-dvukhkomnatnykh-kvartir-gorod-moskva/">2-комнатные квартиры</a></i></li>
+            <li><i><a class="link link--line" href="/sale-realty/flats/prodazha-trekhkomnatnykh-kvartir-gorod-moskva/">3-комнатные квартиры</a></i></li>
         </ul>
         <ul class="list">
-            <li><i><a href="/sale-realty/flats/prodazha-kvartir-gorod-moskva/?rc[]=4">4-комнатные квартиры и более</a></i></li>
+            <li><i><a class="link link--line" href="/sale-realty/flats/prodazha-kvartir-gorod-moskva/?rc[]=4">4-комнатные квартиры и более</a></i></li>
         </ul>
     </div>
 
@@ -106,4 +107,89 @@
             </a>
         </li>
     </ul>
+
+    <div class="panel panel--box">
+        <div class="panel--info margin--bottom-large">
+            <div class="panel__icon panel__icon--green">
+                <span>!</span>
+                <i></i>
+            </div>
+            <p>
+                Подберем варианты за 24 часа по всем базам Москвы и области.
+            </p>
+        </div>
+
+        <div class="text--center">
+            <a href="#/" class="button button--green">Подобрать жильё</a>
+        </div>
+    </div>
+
+    <div class="panel panel--box">
+        <p class="text--h3">
+            <a class="link link--reset" href="/sale-realty/flats">Самые дешевые квартиры в Москве</a>
+        </p>
+
+        <ul class="grid grid-col--1-4 list">
+            <li>
+                <a href="#/">
+                    <span class="list__teaser"><img src="/Content/img/news/news-1.png" alt=""></span>
+                </a>
+                <a class="list__link" href="#/">1-комн. квартира <br>31 кв.м.</a>
+                <span class="list__price">2 750 000 ₽</span>
+            </li>
+            <li>
+                <a href="#/">
+                    <span class="list__teaser"><img src="/Content/img/news/news-1.png" alt=""></span>
+                </a>
+                <a class="list__link" href="#/">1-комн. квартира <br>31 кв.м.</a>
+                <span class="list__price">2 750 000 ₽</span>
+            </li>
+            <li>
+                <a href="#/">
+                    <span class="list__teaser"><img src="/Content/img/news/news-1.png" alt=""></span>
+                </a>
+                <a class="list__link" href="#/">1-комн. квартира <br>31 кв.м.</a>
+                <span class="list__price">2 750 000 ₽</span>
+            </li>
+            <li>
+                <a href="#/">
+                    <span class="list__teaser"><img src="/Content/img/news/news-1.png" alt=""></span>
+                </a>
+                <a class="list__link" href="#/">1-комн. квартира <br>31 кв.м.</a>
+                <span class="list__price">2 750 000 ₽</span>
+            </li>
+        </ul>
+
+        <div class="margin--top">
+            <a href="#/" class="button button--medium button--green">Самые дешевые квартиры в Москве</a>
+        </div>
+    </div>
+
+    <div class="margin--top">
+        <h2>Купить квартиру в Москве</h2>
+
+        <p class="lead">В столице большой выбор жилья на продажу, но остановиться на конкретном варианте зачастую не так просто. Не каждая квартира соответствует требованиям. Самостоятельные поиски приводят к тому, что купить квартиру в Москве становится невероятно сложно. Процесс покупки затягивается надолго, ведь кроме подбора уютного жилья нужно собрать различные справки, подготовить, заверить документы. Рекомендуем сразу же обращаться к опытным и подготовленным профессионалам. Мечтаете купить квартиру в Москве на вторичном рынке жилья? Наши риелторы к вашим услугам!</p>
+        <p class="lead">Также мы оказываем помощь в продаже квартиры в Москве и Подмосковье на вторичном рынке жилья. Мы быстро подберем для вашего предложения заинтересованных покупателей.</p>
+        <p class="lead">Просмотреть актуальные и самые свежие варианты комнат и квартир Москвы вы можете в нашей базе квартир.</p>
+
+        <p>
+            <a href="#/" class="button button--medium button--green">Предложения квартир в Москве</a>
+        </p>
+    </div>
+
+    <div class="panel panel--box">
+        <div class="panel--info margin--bottom-large">
+            <div class="panel__icon panel__icon--green">
+                <span>@</span>
+                <i></i>
+            </div>
+            <p>
+                Рассылка новостей от ИНКОМ-Недвижимость — аналитика рынка, мнения экспертов, мероприятия, акции и спецпредложения.
+            </p>
+        </div>
+
+        <div class="text--center">
+            <a href="#/" class="button button--green">Подписаться</a>
+        </div>
+    </div>
 </div>
