Fixed filter panel and style

--- a/Content/less/components/text.less
+++ b/Content/less/components/text.less
@@ -36,6 +36,9 @@
     &--bold {
         font-weight: 700;
     }
+    &--italic{
+        font-style: italic;
+    }
     &--title {
         font-weight: 900;
         text-transform: uppercase;
