--- a/Content/less/main.less
+++ b/Content/less/main.less
@@ -85,11 +85,12 @@ p{
 
     // Element 'header__phone'
     &__phone{
+        display: block;
+        text-align: right;
         float: right;
-        display: inline-block;
         font-family: "Trebuchet MS", Helvetica, sans-serif;
 
-        & > a{
+        &-number{
             line-height: 26px;
             font-size: 30px;
             color: #034da2;
