--- a/Content/less/components/list.less
+++ b/Content/less/components/list.less
@@ -54,4 +54,37 @@
         margin-top: 8px;
         font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
     }
+
+    // Modificator 'list--number'
+    &--number{
+        list-style: none;
+        padding: 4px 0 7px 48px;
+
+        & li{
+            font-size: 18px;
+            line-height: 24px;
+            color: #373737;
+            padding: 24px 0 0;
+            font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
+
+            & .circle{
+                float: left;
+                width: 32px;
+                height: 32px;
+                margin: -4px 0 0 -47px;
+                text-align: center;
+                font-size: 20px;
+                line-height: 32px;
+                border-radius: 100px;
+                color: #ffffff;
+                background: #5093ee;
+                background: -webkit-gradient(linear, 0 0, 0 bottom, from(#5093ee), to(#7fbef5));
+                background: -moz-linear-gradient(#5093ee, #7fbef5);
+                background: -o-linear-gradient(#5093ee, #7fbef5);
+                background: linear-gradient(#5093ee, #7fbef5);
+                -pie-background: linear-gradient(#5093ee, #7fbef5);
+                behavior: url(PIE.htc);
+            }
+        }
+    }
 }
