Fixed table search

--- a/Content/less/components/button.less
+++ b/Content/less/components/button.less
@@ -250,3 +250,12 @@ select + .button{
         margin-left: 6px;
     }
 }
+
+
+
+// ****************************************************
+//                    Link
+// ****************************************************
+.link{
+    display: inline-block;
+}
