--- a/Content/less/components/navbar.less
+++ b/Content/less/components/navbar.less
@@ -116,10 +116,11 @@
     width: auto;
     border: 1px solid #055aab;
     background-color: #f9f9f9;
-    margin-top: 6px;
+    // margin-top: 6px;
     padding: 30px;
     border-radius: 3px;
     transition: 200ms;
+    z-index: 999999;
 
     & ul{
         display: inline-block;
