--- a/Content/less/components/text.less
+++ b/Content/less/components/text.less
@@ -33,6 +33,9 @@
     &--danger {
         color: #da314b;
     }
+    &--price{
+        color: #710909 !important;
+    }
     &--bold {
         font-weight: 700;
     }
