--- a/Content/less/components/table.less
+++ b/Content/less/components/table.less
@@ -57,6 +57,9 @@ table{
                     color: #ffffff;
                 }
             }
+            &:first-child{
+                padding-left: 10px;
+            }
         }
     }
 
