--- a/views/sale-realty/search.html
+++ b/views/sale-realty/search.html
@@ -138,6 +138,8 @@
         </tbody>
     </table>
 
+    <a href="#/" class="button button--more col--1-1 margin--top">Показать ещё</a>
+
     <div class="panel panel--white panel--box">
         <div class="panel--info margin--bottom-large">
             <div class="panel__icon panel__icon--green">
