Add slider in angular

--- a/Content/less/components/button.less
+++ b/Content/less/components/button.less
@@ -261,4 +261,5 @@ select + .button{
 // ****************************************************
 .link{
     display: inline-block;
+    cursor: pointer;
 }
