--- a/Content/less/components/text.less
+++ b/Content/less/components/text.less
@@ -95,12 +95,14 @@ h1,
     font-size: 2.2rem;
     line-height: 3rem;
     font-weight: 100;
+    font-family: Georgia, serif;
 }
 h2,
 .text--h2 {
     font-size: 2rem;
     line-height: 2.6rem;
     font-weight: 100;
+    font-family: Georgia, serif;
 }
 h3,
 .text--h3 {
