--- a/Content/less/components/utilits.less
+++ b/Content/less/components/utilits.less
@@ -153,6 +153,17 @@
             margin: 0 (@margin-padding / 4) 0 0;
         }
     }
+
+    // Left
+    &--left {
+        margin: 0 0 0 @margin-padding !important;
+        &-small {
+            margin: 0 0 0 (@margin-padding / 2) !important;
+        }
+        &-mini {
+            margin: 0 0 0 (@margin-padding / 4) !important;
+        }
+    }
     // Auto
     &--auto{
         margin: 0 auto;
