--- a/views/home.html
+++ b/views/home.html
@@ -1,46 +1,22 @@
-<!-- <div class="container container--center slider">
+
+<div class="container container--center slider">
     <div class="slider__shadow"></div>
     <div class="panel">
-        <div class="owl-carousel">
-            <div>
-                <a href="#">
-                    <img src="/Content/img/slider/slide-1.jpg" alt="">
-                </a>
+        <data-owl-carousel class="owl-carousel"
+                data-options="{items:1, loop:true, autoplay: true, autoplaySpeed: 1000}">
+            <div owl-carousel-item="" data-ng-repeat="item in items1" class="item">
+                <img src="{{item.url}}" alt="{{item.alt}}">
             </div>
-            <div>
-                <a href="#">
-                    <img src="/Content/img/slider/slide-2.jpg" alt="">
-                </a>
-            </div>
-            <div>
-                <a href="#">
-                    <img src="/Content/img/slider/slide-3.jpg" alt="">
-                </a>
-            </div>
-            <div>
-                <a href="#">
-                    <img src="/Content/img/slider/slide-4.jpg" alt="">
-                </a>
-            </div>
-            <div>
-                <a href="#">
-                    <img src="/Content/img/slider/slide-5.jpg" alt="">
-                </a>
-            </div>
-            <div>
-                <a href="#">
-                    <img src="/Content/img/slider/slide-6.jpg" alt="">
-                </a>
-            </div>
-        </div>
+        </data-owl-carousel>
     </div>
-</div> -->
+</div>
+
 
 <div class="container container--center">
 
     <div class="panel panel--box">
-        <h1>Агентство недвижимости ИНКОМ&nbsp;— крупнейшее в&nbsp;Москве</h1>
-        <p>ИНКОМ-Недвижимость&nbsp;— агентство недвижимости, занимающее ведущие позиции на&nbsp;рынке риэлторских услуг.&nbsp;По&nbsp;оценкам экспертов, значительная часть организованных сделок в&nbsp;московском регионе приходится именно на&nbsp;«ИНКОМ», что позволяет нам вот уже многие годы занимать лидирующее место среди агентств недвижимости Москвы и&nbsp;Подмосковья.</p>
+        <h1>Агентство недвижимости ИНКОМ — крупнейшее в Москве</h1>
+        <p>ИНКОМ-Недвижимость — агентство недвижимости, занимающее ведущие позиции на рынке риэлторских услуг. По оценкам экспертов, значительная часть организованных сделок в московском регионе приходится именно на «ИНКОМ», что позволяет нам вот уже многие годы занимать лидирующее место среди агентств недвижимости Москвы и Подмосковья.</p>
 
         <ul class="grid grid-col--1-5 text--center list">
             <li>
@@ -130,11 +106,11 @@
 <div class="container container--center">
     <div class="panel panel--box">
         <h2>Продажа недвижимости в Москве и Подмосковье</h2>
-        <p>Агентство ИНКОМ-Недвижимость уже более 20 лет предоставляет риэлторские услуги юридическим и&nbsp;физическим лицам в&nbsp;ключевых сегментах рынка недвижимости: покупка и&nbsp;продажа квартир на&nbsp;первичном и&nbsp;вторичном рынках городского и&nbsp;загородного жилья, аренда квартир, а&nbsp;также проводим сделки с&nbsp;коммерческой недвижимостью. Жилая и&nbsp;коммерческая недвижимость Москвы и&nbsp;Московской области представлена в&nbsp;нашем каталоге в&nbsp;самом полном объеме, в&nbsp;наличии есть множество вариантов жилья различного типа, предоставляемого как с&nbsp;помощью риэлторов, так и&nbsp;без посредников.</p>
-        <p>Мы&nbsp;оказываем риэлторские услуги по&nbsp;аренде и&nbsp;продаже недвижимости во&nbsp;всех сегментах. С&nbsp;помощью наших специалистов вы&nbsp;сможете купить элитную недвижимость в&nbsp;Москве и&nbsp;Подмосковье, а&nbsp;также приобрести жилье эконом класса. В&nbsp;нашей базе недвижимости, содержащей огромное количество предложений, найдутся как эксклюзивные квартиры, так и&nbsp;бюджетные варианты, а&nbsp;также большое количество загородного жилья всех категорий. Специалисты нашего агентства помогут в&nbsp;подборе оптимального для вас варианта и&nbsp;оформят сделку по&nbsp;<nobr>купле продаже</nobr> недвижимости максимально надежно и&nbsp;быстро!</p>
+        <p>Агентство ИНКОМ-Недвижимость уже более 20 лет предоставляет риэлторские услуги юридическим и физическим лицам в ключевых сегментах рынка недвижимости: покупка и продажа квартир на первичном и вторичном рынках городского и загородного жилья, аренда квартир, а также проводим сделки с коммерческой недвижимостью. Жилая и коммерческая недвижимость Москвы и Московской области представлена в нашем каталоге в самом полном объеме, в наличии есть множество вариантов жилья различного типа, предоставляемого как с помощью риэлторов, так и без посредников.</p>
+        <p>Мы оказываем риэлторские услуги по аренде и продаже недвижимости во всех сегментах. С помощью наших специалистов вы сможете купить элитную недвижимость в Москве и Подмосковье, а также приобрести жилье эконом класса. В нашей базе недвижимости, содержащей огромное количество предложений, найдутся как эксклюзивные квартиры, так и бюджетные варианты, а также большое количество загородного жилья всех категорий. Специалисты нашего агентства помогут в подборе оптимального для вас варианта и оформят сделку по <nobr>купле продаже</nobr> недвижимости максимально надежно и быстро!</p>
 
         <h2>Каталог объектов</h2>
-        <p>Для получения информации по&nbsp;нашей базе недвижимости выберите подходящий тип объекта и&nbsp;нажмите «Найти».</p>
+        <p>Для получения информации по нашей базе недвижимости выберите подходящий тип объекта и нажмите «Найти».</p>
 
         <div class="margin--top">
             <select name="sources" class="input input--select" placeholder="Квартиры и комнаты">
