--- a/views/sale-realty/search.html
+++ b/views/sale-realty/search.html
@@ -42,7 +42,7 @@
                 <!-- Фото -->
                 <td>
                     <div class="table-search__img">
-                        <a href="#/">
+                        <a href="#/sale-realty/flats/search-result">
                             <img src="http://www.incom.ru/images/object_images/1390220/thumb.jpg" title="Вторичная недвижимость">
                         </a>
 
@@ -55,7 +55,7 @@
 
                 <!-- Город -->
                 <td>
-                    <a href="/sale-realty/flats/1390220/" target="_blank" class="link">
+                    <a href="#/sale-realty/flats/search-result" target="_blank" class="link">
                         г. Москва<br>ул. Федоскинская д. 5
                     </a>
                 </td>
