--- a/Content/less/main.less
+++ b/Content/less/main.less
@@ -29,7 +29,7 @@ body, html{
     background: #fbfbfb;
     z-index: 1;
 
-    font-family: Georgia, serif;
+    font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
 }
 
 p{
@@ -193,5 +193,19 @@ p{
             text-decoration: underline;
             line-height: 21px;
         }
+    }
+}
+
+// *******************************************
+//                Map
+// *******************************************
+
+.map{
+    border: 1px solid #E1E1E1;
+    border-radius: 6px;
+
+    // Element 'map__toggle'
+    &__toggle{
+        font-family: Georgia, serif;
     }
 }
