--- a/Content/less/components/list.less
+++ b/Content/less/components/list.less
@@ -20,6 +20,14 @@
         line-height: 20px;
     }
 
+    // Modificator 'list--horizontal'
+    &--horizontal{
+        & > *{
+            display: inline-block;
+            margin-right: -4px;
+        }
+    }
+
     // Element 'list__teaser'
     &__teaser{
         display: inline-block;
