--- a/Content/less/components/panel.less
+++ b/Content/less/components/panel.less
@@ -49,6 +49,19 @@
         background: @panel-white-background;
     }
 
+    // Modificator 'panel--120-blue'
+    &--120-blue{
+        display: inline-block;
+        background-color: rgb(98,166,241);
+        background-repeat: no-repeat;
+        background-position: center center;
+        width: 120px;
+        height: 120px;
+        line-height: 120px;
+        border-radius: 80px;
+        margin-bottom: 25px;
+    }
+
     // Modificator 'panel--info'
     &--info{
         position: relative;
