Add new table for Houdeds

--- a/Content/less/components/button.less
+++ b/Content/less/components/button.less
@@ -282,4 +282,11 @@ select + .button{
 .link{
     display: inline-block;
     cursor: pointer;
+
+    // Modificator 'link--reset'
+    &--reset{
+        text-decoration: none;
+        color: inherit;
+        outline: none;
+    }
 }
