--- a/Content/less/components/panel.less
+++ b/Content/less/components/panel.less
@@ -60,6 +60,25 @@
         line-height: 120px;
         border-radius: 80px;
         margin-bottom: 25px;
+        transition: all 200ms;
+
+        &:hover{
+            transform: scale(1.1);
+            transition: all 200ms;
+        }
+    }
+
+    // Modificator 'panel--shares'
+    &--shares{
+        border: 1px solid #da0e0e;
+        color: #da0e0e;
+        font-size: 16px;
+        line-height: 20px;
+        text-align: center;
+        padding: 15px 10px;
+        margin: 0 2px 25px 0;
+        border-radius: 3px;
+        text-decoration: underline;
     }
 
     // Modificator 'panel--info'
