--- a/views/sale-realty/prodazha-domov-kottedzhej.html
+++ b/views/sale-realty/prodazha-domov-kottedzhej.html
@@ -4,26 +4,13 @@
         <li><span>Недвижимость</span></li>
     </ul>
 
-    <h1>Продажа квартир в Москве</h1>
+    <h1>Продажа домов, коттеджей в Подмосковье</h1>
 
     <div data-ng-include="'/views/component/filter.html'"></div>
 
-    <div class="grid grid-col--1-3">
-        <ul class="list">
-            <li><i><a class="link link--line" href="/sale-realty/flats/prodazha-kvartir-gorod-moskva/?or=Y">Однокомнатные квартиры</a></i></li>
-            <li><i><a class="link link--line" href="/sale-realty/flats/prodazha-odnokomnatnykh-kvartir-gorod-moskva/">Квартиры</a></i></li>
-        </ul>
-        <ul class="list">
-            <li><i><a class="link link--line" href="/sale-realty/flats/prodazha-dvukhkomnatnykh-kvartir-gorod-moskva/">Двухкомнатные квартиры</a></i></li>
-        </ul>
-        <ul class="list">
-            <li><i><a class="link link--line" href="/sale-realty/flats/prodazha-kvartir-gorod-moskva/?rc[]=4">Трехкомнатные квартиры</a></i></li>
-        </ul>
-    </div>
+    <h3 class="margin--v">Загородная недвижимость Подмосковья</h3>
 
-    <h3 class="margin--v">Найдено 488 из 15000 квартир в городе Москва</h3>
-
-    <div data-ng-include="'/views/component/list-room.html'"></div>
+    <div data-ng-include="'/views/component/list-doma.html'"></div>
 
     <a href="#/" class="button button--more col--1-1 margin--top">Показать ещё</a>
 
