--- a/Content/less/components/panel.less
+++ b/Content/less/components/panel.less
@@ -42,6 +42,11 @@
         border: 1px solid #E1E1E1;
         border-radius: @panel-box-border-radius;
         margin-top: 40px;
+
+        // Modificator 'panel--box-small'
+        &-small{
+            padding: (@panel-box-padding / 2);
+        }
     }
 
     // Modificator 'panel--white'
