--- a/Content/less/components/text.less
+++ b/Content/less/components/text.less
@@ -27,6 +27,10 @@
         font-size: 75%;
         line-height: 14px;
     }
+    &--medium {
+        font-size: 90%;
+        line-height: 18px;
+    }
     &--success {
         color: #8cc14c !important;
     }
@@ -41,6 +45,9 @@
     }
     &--italic{
         font-style: italic;
+    }
+    &--georgia{
+        font-family: 'georgia', serif !important;
     }
     &--title {
         font-weight: 900;
@@ -113,13 +120,13 @@ h3,
 h4,
 .text--h4 {
     font-size: 1.2rem;
-    line-height: 2rem;
+    line-height: 1.4rem;
     font-weight: 100;
 }
 h5,
 .text--h5 {
     font-size: 1rem;
-    line-height: 1.8rem;
+    line-height: 1.2rem;
     font-weight: 100;
 }
 h6,
