--- a/views/sale-realty/prodazha-domov-kottedzhej.html
+++ b/views/sale-realty/prodazha-domov-kottedzhej.html
@@ -8,6 +8,38 @@
 
     <div data-ng-include="'/views/component/filter.html'"></div>
 
+    <ul class="grid grid--small">
+        <!-- <li class="col--1-4">
+            <div class="block">
+                <div class="block-spec">
+                    <div class="block-spec__cover" style="background-image: url(http://www.incom.ru/includes/resizerus.php?params=225x0x170x0x100&path=/upload/iblock/284/evropa_tgb_dzn.jpg);">
+                        <div class="block-spec__desc">
+                            <div class="block-spec__desc-info">
+                                <b>Европа</b><br>
+                                Новорижское шоссе, 22 км
+                            </div>
+                            <div class="block-spec__desc-price"><b>10.8</b><br>млн руб.</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </li> -->
+
+        <li class="col--1-4">
+            <div class="block-spec">
+                <div class="block-spec__cover" style="background-image: url(http://www.incom.ru/includes/resizerus.php?params=225x0x170x0x100&path=/upload/iblock/284/evropa_tgb_dzn.jpg);">
+                    <div class="block-spec__desc">
+                        <div class="block-spec__desc-info">
+                            <b>Европа</b><br>
+                            Новорижское шоссе, 22 км
+                        </div>
+                        <div class="block-spec__desc-price"><b>10.8</b><br>млн руб.</div>
+                    </div>
+                </div>
+            </div>
+        </li>
+    </ul>
+
     <h3 class="margin--v">Загородная недвижимость Подмосковья</h3>
 
     <div data-ng-include="'/views/component/list-doma.html'"></div>
